--- a/css/style.css
+++ b/css/style.css
@@ -179,9 +179,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
   content: '';
   display: block;
   position: absolute;
@@ -189,11 +190,15 @@ body {
   height: 20%;
   bottom: 0;
   background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
-}
+} */
 
 .hero .content {
   padding: 1.4rem 6%;
-  max-width: 60rem;
+  /* max-width: 60rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 150px;
 }
 
 .hero .content h1 {
@@ -262,6 +267,10 @@ body {
 
 .about .row .about-img img {
   width: 100%;
+  mask-image: url(../img/menu/Coffee-Beans-Cup.svg);
+  mask-size: 65%;
+  mask-repeat: no-repeat;
+  mask-position: center;
 }
 
 .about .row .content {
