--- a/css/style.css
+++ b/css/style.css
@@ -119,16 +119,33 @@ body {
 }
 
 /* Shopping cart */
+#shopping-cart {
+  position: relative;
+}
+
+#shopping-cart span {
+  display: inline-block;
+  padding: 1px 5px ;
+  background-color: red;
+  color: white;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+
 .shopping-cart {
   position: absolute;
   top: 100%;
   right: -100%;
   width: 35rem;
   height: 100vh;
-  padding: 0 1.5rem;
+  padding: 0 1.5rem 5rem;
   color: var(--bg);
   background-color: #fff;
   transition: 0.5s;
+  overflow-y: auto;
 }
 
 .shopping-cart.active {
@@ -146,28 +163,90 @@ body {
 }
 
 .shopping-cart img {
-  height: 6rem;
-  width: 6rem;
+  height: 4rem; 
+  width: 4rem;
   border-radius: 50%;
 }
 
 .shopping-cart h3 {
-  font-size: 1.6rem;
-  padding-bottom: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .shopping-cart .item-price {
   font-size: 1.2rem;
 }
 
-.shopping-cart .remove-item {
-  position: absolute;
-  right: 1rem;
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove {
+  display: inline-block;
+  padding: 2px 5px;
+  cursor: pointer;
+  margin: 0 8px;
+  background-color: #010101;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.shopping-cart h4 {
+  font-size: 1.5rem;
+  margin-top: -1rem;
+  text-align: center;
+}
+
+/* Checkout Form */
+.form-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-top: 1px dashed black;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.form-container h5 {
+  text-align: center;
+  font-size: 1rem;
+}
+
+.form-container form {
+  width: 100%;
+  text-align: center;
+}
+
+.form-container label {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form-container span {
+  text-align: right;
+}
+
+.form-container input {
+  background-color: #ddd;
+  padding: 5px;
+  font-size: 1rem;
+  width: 70%;
+
+}
+
+.form-container .checkout-button {
+  padding:  6px 14px;
+  background-color: royalblue;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 20px;
+  margin: 1rem auto;
   cursor: pointer;
 }
 
-.shopping-cart .remove-item:hover {
-  color: var(--primary);
+.form-container .checkout-button.disabled {
+  background-color: #999;
+  cursor: not-allowed;
 }
 
 /* Hero Section */
@@ -396,11 +475,6 @@ body {
   font-weight: bold;
 }
 
-.products .product-price span {
-  text-decoration: line-through;
-  font-weight: lighter;
-  font-size: 1rem;
-}
 
 /* Contact Section */
 .contact .row {
@@ -510,6 +584,7 @@ footer .credit a {
 .modal-container {
   position: relative;
   background-color: #fefefe;
+  border-radius: 0.3rem;
   color: var(--bg);
   margin: 15% auto;
   padding: 1.2rem;
